Refactor navbar layout and styling; add logo images and enhance mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">IDAPT Hub - IIT (BHU)</a>
+            <a href="#" class="logo-group">
+                <img src="logo-idapt.gif" alt="IDAPT Logo" class="nav-logo">
+                <img src="logo-iitbhu.gif" alt="IIT BHU Logo" class="nav-logo">
+                <div class="logo-text">
+                    <span class="main-text">IDAPT Hub & SBME</span>
+                    <span class="sub-text">IIT (BHU) Varanasi</span>
+                </div>
+            </a>
+
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#topics">Curriculum</a></li>
                 <li><a href="#speakers">Speakers</a></li>
-                <li><a href="#registration">Registration</a></li>
+                <li><a href="#registration" class="highlight-link">Register</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
