Replace background image and enhance About section layout; add horizontal card styling for better presentation

--- a/index.html
+++ b/index.html
@@ -68,17 +68,24 @@
     <section id="about" class="section">
         <div class="container">
             <h2 class="section-title">About the Workshop</h2>
-            <p>
+            <p style="margin-bottom: 40px; text-align: center;">
                 This short-term course is specifically designed for UG/PG/PhD students, researchers, faculties, and technical staff interested in Computational Neuroscience, Signal Processing, AI, Transcriptomic Data Analysis, and Drug Repurposing.
             </p>
             <div class="grid-2">
-                <div class="card">
-                    <h3>About IDAPT</h3>
-                    <p>The Interdisciplinary Data Analytics and Predictive Technologies (IDAPT) focuses on leveraging data analytics and AI to transform healthcare, telecommunications, and power sectors under the National Mission on Cyber-Physical Systems (NM-ICPS).</p>
+                <div class="card about-card-horizontal">
+                    <img src="logo-idapt.gif" alt="IDAPT Hub Logo" class="org-logo">
+                    <div class="card-text">
+                        <h3>About IDAPT</h3>
+                        <p>The Interdisciplinary Data Analytics and Predictive Technologies (IDAPT) focuses on leveraging data analytics and AI to transform healthcare, telecommunications, and power sectors under the National Mission on Cyber-Physical Systems (NM-ICPS).</p>
+                    </div>
                 </div>
-                <div class="card">
-                    <h3>About SBME</h3>
-                    <p>The School of Biomedical Engineering at IIT (BHU) offers unique engineering education with thrust areas in Medical Devices, Bioinstrumentation, and Computational Biology.</p>
+
+                <div class="card about-card-horizontal">
+                    <img src="logo-iitbhu.gif" alt="SBME / IIT BHU Logo" class="org-logo">
+                    <div class="card-text">
+                        <h3>About SBME</h3>
+                        <p>The School of Biomedical Engineering at IIT (BHU) offers unique engineering education with thrust areas in Medical Devices, Bioinstrumentation, and Computational Biology.</p>
+                    </div>
                 </div>
             </div>
         </div>
