Add meta tags for improved SEO and social media sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computational Neuroscience & Biology Workshop | IIT (BHU)</title>
+    
+    <meta name="description" content="Join the Short Term Course on Computational Neuroscience & Biology at IIT (BHU) from Feb 02-06, 2026. Explore AI, Signal Processing, and Drug Repurposing. Register now!">
+
+    <meta property="og:title" content="Computational Neuroscience & Biology Workshop | IIT (BHU)">
+    <meta property="og:description" content="A 5-day intensive workshop covering Brain function, MRI/EEG Analysis, AI for Brain & Behavior, and RNA-seq workflows. Organized by IDAPT Hub & SBME.">
+    <meta property="og:image" content="https://computationalneurosciencecourse.netlify.app/IIT_BHU_stylized.png">
+    <meta property="og:url" content="https://computationalneurosciencecourse.netlify.app">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Computational Neuroscience & Biology Workshop">
+    <meta name="twitter:description" content="Join us at IIT (BHU) for a workshop on Computational Neuroscience and AI. Feb 02-06, 2026.">
+    <meta name="twitter:image" content="https://computationalneurosciencecourse.netlify.app/IIT_BHU_stylized.png">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
