--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <meta property="og:title" content="Computational Neuroscience & Biology Workshop | IIT (BHU)">
     <meta property="og:description" content="A 5-day intensive workshop covering Brain function, MRI/EEG Analysis, AI for Brain & Behavior, and RNA-seq workflows. Organized by IDAPT Hub & SBME.">
-    <meta property="og:image" content="https://computationalneurosciencecourse.netlify.app/IIT_BHU_stylized.png">
+    <meta property="og:image" content="https://computationalneurosciencecourse.netlify.app/Social_banner.png">
     <meta property="og:url" content="https://computationalneurosciencecourse.netlify.app">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Computational Neuroscience & Biology Workshop">
     <meta name="twitter:description" content="Join us at IIT (BHU) for a workshop on Computational Neuroscience and AI. Feb 02-06, 2026.">
-    <meta name="twitter:image" content="https://computationalneurosciencecourse.netlify.app/IIT_BHU_stylized.png">
+    <meta name="twitter:image" content="https://computationalneurosciencecourse.netlify.app/Social_banner.png">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
