updated download brochure button

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
             <div class="cta-group">
                 <a href="https://forms.gle/LeRqwVGc7tLSJDFQ8" target="_blank" class="btn btn-primary pulse-anim">Register Now</a>
-                <a href="#about" class="btn btn-outline">View Brochure Info</a>
+                <a href="Brochure.pdf" download="Computational_Neuroscience_Brochure" class="btn btn-outline">
+                    <i class="fas fa-download"></i> Download Brochure
+                </a>
             </div>
         </div>
     </header>
@@ -348,7 +350,12 @@
                         </tr>
                     </tbody>
                 </table>
-                <p class="note text-white">*Food and accommodation included for offline participants. Fees are non-refundable.</p>
+                <div style="padding: 20px 25px; border-top: 1px solid #eee;">
+                    <p class="note" style="color: #333; margin: 0; font-size: 0.95rem; line-height: 1.6;">
+                        <strong style="color: #e74c3c;">Note:</strong> Food and accommodation is included for offline participants.<br>
+                        <span style="font-size: 0.9rem; opacity: 0.8;">* The Registration Fee & GST is non-refundable to participants.</span>
+                    </p>
+                </div>
             </div>
 
             <div class="payment-info">
