--- a/index.html
+++ b/index.html
@@ -140,6 +140,203 @@
         </div>
     </section>
 
+    <section id="schedule" class="section">
+        <div class="container">
+            <h2 class="section-title">Program Schedule</h2>
+            
+            <div class="schedule-tabs">
+                <button class="tab-btn active" onclick="openDay(event, 'day1')">Day 1 (Feb 02)</button>
+                <button class="tab-btn" onclick="openDay(event, 'day2')">Day 2 (Feb 03)</button>
+                <button class="tab-btn" onclick="openDay(event, 'day3')">Day 3 (Feb 04)</button>
+                <button class="tab-btn" onclick="openDay(event, 'day4')">Day 4 (Feb 05)</button>
+                <button class="tab-btn" onclick="openDay(event, 'day5')">Day 5 (Feb 06)</button>
+            </div>
+
+            <div id="day1" class="tab-content" style="display: block;">
+                <div class="timeline-item">
+                    <div class="time">09:00 - 11:30</div>
+                    <div class="details">
+                        <h4>Registration & Inaugural Program</h4>
+                        <p>Physical Registration, Inauguration, and High Tea</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">11:30 - 12:30</div>
+                    <div class="details">
+                        <h4>R&D for the Nation from C-DAC</h4>
+                        <p class="speaker">Dr. Kalaiselvan A (CDAC Trivandrum)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">14:00 - 16:00</div>
+                    <div class="details">
+                        <h4>Inner Speech Decoding & Demo</h4>
+                        <p class="speaker">Er. Binu PJ & Er. Deepu SS (CDAC Trivandrum)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">16:20 - 17:00</div>
+                    <div class="details">
+                        <h4>Seizure Detection and Prediction</h4>
+                        <p class="speaker">Dr. Sudalaimani C (CDAC Trivandrum)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="day2" class="tab-content">
+                <div class="timeline-item">
+                    <div class="time">10:00 - 11:00</div>
+                    <div class="details">
+                        <h4>Clinical Anatomy of the Brain</h4>
+                        <p class="speaker">Dr. Nidhi Sunhare (AIIMS Patna)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">11:30 - 12:30</div>
+                    <div class="details">
+                        <h4>The Language of Diagnostic MRI</h4>
+                        <p class="speaker">Dr. Ashish Verma (IMS, BHU)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">14:00 - 15:00</div>
+                    <div class="details">
+                        <h4>EEG Instrumentation and Biometrics</h4>
+                        <p class="speaker">Dr. Jac Fredo AR (IIT (BHU) Varanasi)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">15:00 - 17:00</div>
+                    <div class="details">
+                        <h4>Demo on EEG, EMG, ECG Data Acquisition</h4>
+                        <p class="speaker">CNBL Lab (IIT (BHU) Varanasi)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="day3" class="tab-content">
+                <div class="timeline-item">
+                    <div class="time">10:00 - 11:00</div>
+                    <div class="details">
+                        <h4>Freezing of Gait: Smart Wear Solutions</h4>
+                        <p class="speaker">Prof. Uttama Lahiri (IIT Gandhinagar)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">11:30 - 12:30</div>
+                    <div class="details">
+                        <h4>Neuromorphic Signal Processing for Healthcare</h4>
+                        <p class="speaker">Dr. Deepesh Kumar (IIT (BHU) Varanasi)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">14:00 - 15:00</div>
+                    <div class="details">
+                        <h4>EMG Sensing: Prosthesis & Wearables</h4>
+                        <p class="speaker">Dr. Oppili Prasad (IIT (BHU) Varanasi)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">15:00 - 16:00</div>
+                    <div class="details">
+                        <h4>Trends in Contemporary Cancer Research</h4>
+                        <p class="speaker">Dr. Sabitha Ramanathan (Cancer Institute Adyar)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">16:20 - 17:00</div>
+                    <div class="details">
+                        <h4>AI & Physiology Driven Computational Models</h4>
+                        <p class="speaker">Dr. Pragathi Priyadharshini (IIT Kanpur)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="day4" class="tab-content">
+                <div class="timeline-item">
+                    <div class="time">10:00 - 11:00</div>
+                    <div class="details">
+                        <h4>Computing with Rhythms (Oscillatory NN)</h4>
+                        <p class="speaker">Prof. Srinivasan Chakravarthy (IIT Madras)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">11:30 - 12:30</div>
+                    <div class="details">
+                        <h4>Cardiovascular Diagnosis with ML/DL</h4>
+                        <p class="speaker">Prof. Samarendra Dandapat (IIT Guwahati)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">14:00 - 15:00</div>
+                    <div class="details">
+                        <h4>Automated Classification of Neurological Disorders</h4>
+                        <p class="speaker">Prof. Ram Bilas Pachori (IIT Indore)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">15:00 - 16:00</div>
+                    <div class="details">
+                        <h4>Graph Signal Processing for EEG</h4>
+                        <p class="speaker">Dr. Manikandan (IIT Palakkad)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">16:20 - 17:00</div>
+                    <div class="details">
+                        <h4>DL based Brain Tumor Diagnosis</h4>
+                        <p class="speaker">Dr. Maheshkumar H. Kolekar (IIT Patna)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="day5" class="tab-content">
+                <div class="timeline-item">
+                    <div class="time">10:00 - 11:00</div>
+                    <div class="details">
+                        <h4>From Neural Signals to Adaptive Stimulation</h4>
+                        <p class="speaker">Dr. Jithin Krishnan (SCTIMST Trivandrum)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">11:30 - 12:30</div>
+                    <div class="details">
+                        <h4>Neural Signal Processing for Epilepsy</h4>
+                        <p class="speaker">Dr. Karthick PA (NIT Trichy)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">14:00 - 15:00</div>
+                    <div class="details">
+                        <h4>AI-driven Multimodal Sensing</h4>
+                        <p class="speaker">Dr. Nagarajan Ganapathi (IIT Hyderabad)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">15:00 - 16:00</div>
+                    <div class="details">
+                        <h4>MR Image Analysis for Dementia</h4>
+                        <p class="speaker">Dr. Rohini Palanisamy (IIITDM Kancheepuram)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">16:20 - 17:00</div>
+                    <div class="details">
+                        <h4>Surface EMG Modelling and Analysis</h4>
+                        <p class="speaker">Prof. Venugopal G (NSS Palakkad)</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="time">17:00 - 19:00</div>
+                    <div class="details">
+                        <h4>Closing Ceremony</h4>
+                        <p>Vote of Thanks, Group Picture, Discussion</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="speakers" class="section">
         <div class="container">
             <h2 class="section-title">Distinguished Speakers</h2>
@@ -415,6 +612,28 @@
                 document.getElementById("countdown-container").innerHTML = "<h3>Registration Closed</h3>";
             }
         }, 1000);
+    </script>
+
+    <script>
+        function openDay(evt, dayName) {
+            var i, tabcontent, tablinks;
+            
+            // Hide all tab content
+            tabcontent = document.getElementsByClassName("tab-content");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+
+            // Remove "active" class from all buttons
+            tablinks = document.getElementsByClassName("tab-btn");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+
+            // Show the current tab, and add an "active" class to the button that opened the tab
+            document.getElementById(dayName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
     </script>
 
 </body>
