Add workshop schedule PDF and update download links in index.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 <a href="Brochure.pdf" download="Computational_Neuroscience_Brochure" class="btn btn-outline">
                     <i class="fas fa-download"></i> Download Brochure
                 </a>
+                <a href="Workshop Sheldule.pdf" download="Workshop_Schedule" class="btn btn-outline">
+                    <i class="fas fa-download"></i> Schedule
+                </a>
             </div>
         </div>
     </header>
@@ -111,31 +114,34 @@
         <div class="container">
             <h2 class="section-title">Course Highlights</h2>
             <div class="topics-grid">
+                
                 <div class="topic-item">
                     <i class="fas fa-brain"></i>
-                    <h4>Comp. Neuroscience</h4>
-                    <p>Brain function, seizures, sleep, emotion, and disease through multi-scale modeling.</p>
+                    <h4>Comp. Neuroscience & Oscillations</h4>
+                    <p>Computing with rhythms, trainable oscillatory neural networks, and brain function modeling.</p>
                 </div>
+
                 <div class="topic-item">
-                    <i class="fas fa-procedures"></i>
-                    <h4>MRI & EEG Analysis</h4>
-                    <p>Neural signal processing, brain connectivity, and cognitive state mapping.</p>
+                    <i class="fas fa-wave-square"></i> <h4>MRI, EEG & Graph Signals</h4>
+                    <p>Diagnostic MRI vowels/consonants, graph signal processing, and biometrics instrumentation.</p>
                 </div>
-                <div class="topic-item">
-                    <i class="fas fa-dna"></i>
-                    <h4>RNA-seq Workflows</h4>
-                    <p>Preprocessing, differential expression, and functional annotation.</p>
-                </div>
+
                 <div class="topic-item">
                     <i class="fas fa-robot"></i>
-                    <h4>AI for Brain & Behavior</h4>
-                    <p>Epilepsy, emotion, and sleep decoding from multimodal data.</p>
+                    <h4>AI for Healthcare</h4>
+                    <p>Deep learning for brain tumor diagnosis, seizure prediction, and inner speech decoding.</p>
                 </div>
+
                 <div class="topic-item">
-                    <i class="fas fa-pills"></i>
-                    <h4>Drug Repurposing</h4>
-                    <p>Systems-level linking of molecular signatures to therapies.</p>
+                    <i class="fas fa-microchip"></i> <h4>Neuromorphic & Smart Sensing</h4>
+                    <p>Neuromorphic signal processing, EMG sensing for prosthetics, and smart wearable solutions.</p>
                 </div>
+
+                <div class="topic-item">
+                    <i class="fas fa-heartbeat"></i> <h4>Clinical & Therapeutic Apps</h4>
+                    <p>Cancer research trends, adaptive stimulation, and cardiovascular diagnosis with ML.</p>
+                </div>
+
             </div>
         </div>
     </section>
